--- a/ContactUs/GFX.Core/GFX.Core.csproj
+++ b/ContactUs/GFX.Core/GFX.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{367E03C2-9224-4041-824B-31A84BC8A072}</ProjectGuid>
+    <ProjectGuid>{792C66A1-74D4-4652-B966-BA591C920030}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ContactUs.DataAccess</RootNamespace>
-    <AssemblyName>ContactUs.DataAccess</AssemblyName>
+    <RootNamespace>GFX.Core</RootNamespace>
+    <AssemblyName>GFX.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,16 +40,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\ContactUs.Models.csproj">
-      <Project>{082032b0-4090-4972-bc25-685bd1f271af}</Project>
-      <Name>ContactUs.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GFX.Core\GFX.Core.csproj">
-      <Project>{792c66a1-74d4-4652-b966-ba591c920030}</Project>
-      <Name>GFX.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
