--- a/ContactUs/GFX.Core/GFX.Core.csproj
+++ b/ContactUs/GFX.Core/GFX.Core.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeRepository_T.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IRepository_T.cs" />
     <Compile Include="IService.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="RootClass.cs" />
     <Compile Include="ServiceBase_T.cs" />
+    <Compile Include="SystemTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
