--- a/ContactUs/ContactUs.Web/Web.config
+++ b/ContactUs/ContactUs.Web/Web.config
@@ -9,6 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+
+    <add name="ContactUsDb"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=.\sqlexpress;
+           Initial Catalog=Aerothai_ContactUsDb;
+           Integrated Security=True;
+           MultipleActiveResultSets=True;"/>
+    
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ContactUs.Web-20150916041146.mdf;Initial Catalog=aspnet-ContactUs.Web-20150916041146;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -19,7 +27,11 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -61,4 +73,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 </configuration>
